# devtools_scicomp_project_2025

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run_test.yml
causal_conv_arm/: __init__.py  arm.py  conv.py  train.py  utils.py
causal_conv_arm/tests/: __init__.py  conv_test.py
configs/: train.toml
leonardo/: .env  .ignore  sync.sh  train.slurm
leonardo/environment/: activate  deactivate  requirements.txt  setup.sh
notebooks/: generate_samples.ipynb
runs/Aug12_16-22-04_lrdn0122.leonardo.local/: events.out.tfevents.1755008524.lrdn0122.leonardo.local.404266.0
